# face_detection_tracker

./: CMakeLists.txt  README.md  package.xml
cf_libs/common/: math_helper.hpp  scale_estimator.hpp
cf_libs/dsst/: dsst_tracker.hpp
cf_libs/kcf/: kcf_tracker.hpp
face_images/: face_images.csv  face_legend.csv  fischer_faces.yml
include/: face_detection_tracker.h  faces_storage.hpp
src/: face_detection_tracker.cpp  main.cpp
